# stdout_stderr_capturing

./: CHANGELOG.md  Justfile  LICENSE  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
stdout_stderr_capturing/: __init__.py  py.typed
tests/: test_capturer.py  test_capturing.py
typings/capturer/: __init__.pyi
