[project]
name = "stdout_stderr_capturing"
version = "0.2.1"
description = "Capture the stdout or stderr output as a list in a context manager block (with)."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/stdout_stderr_capturing"

[dependency-groups]
dev = [
    "capturer>=3.0",
    "mypy>=1.19.1",
    "pytest>=8.1.1",
    "termcolor>=3.3.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
